--- a/sass/Composants/Fonctionnement.scss
+++ b/sass/Composants/Fonctionnement.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     margin-left: 5%;
-    overflow-x: hidden;
 
     .CaseFonctionnement {
         @include FlexCenterCenter;
@@ -94,22 +93,22 @@
 
 @media screen and (min-width: $breakpoint-desktop) {
     .Fonctionnement {
-        display: flex;
+        margin-left: -4%;
         h1 {
-            margin-left: -4%;
+            margin-left: 5%;
         }
         .Case {
             display: flex;
-            margin-left: -4%;
-            margin-right: -4%;
+            margin-left: 5%;
             .CaseFonctionnement {
-                width: 30%;
-                margin-left: 0;
-                margin-right: 2.5%;
+                width: 31%;
+                margin-left: 1%;
+                margin-right: 1%;
             }
             .CaseFonctionnement1 {
-                width: 30%;
-                margin: 0;
+                width: 31%;
+                margin-left: 1%;
+                margin-right: 1%;
                 .IconFonctionnement {
                     margin-left: 2%;
                     margin-right: 3%;
